src/test/deca/context/valid/sansObjet/testCas.deca
// Description:
//    Programme utilisant un cast
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2020

{
    int y;
    y = (int) (5);
  }
