src/test/deca/context/invalid/sansObjet/print_hexa.deca
/* Description:
    Programme minimaliste utilisant println.

 Resultats:
    Hello

 Historique:
    cree le 01/01/2020
*/

{
	float x=0xaac.bcp-23f;
	int z=ab235;
        printx(x);
	printx(z);
	printlnx(x);
	printlnx(z);
}
